add android studio 3.2 Canary 18 links

--- a/index.html
+++ b/index.html
@@ -362,6 +362,41 @@
                             </tr>
                         </thead>
                         <tbody>
+                            <!-- 3.2 Canary 18 -->
+                            <tr>
+                                <td rowspan="5">3.2 Canary 18</td>
+                            </tr>
+                            <tr>
+                                <td rowspan="2">Windows</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.2.0.17/android-studio-ide-181.4830125-windows.zip">android-studio-ide-181.4830125-windows.zip</a>
+                                </td>
+                                <td>1039701211 bytes</td>
+                                <td>255dbec046c02d8bef71292306ead3f553034f316a9294884fd8f2ebe897153f</td>
+                                <td rowspan="5"><a href="https://ws1.sinaimg.cn/large/006tNc79gy1fsimrd0dwvj31kw0ht79q.jpg">查看</a></td>
+                            </tr>
+                            <tr>
+                                <td align="left"><a href="https://dl.google.com/dl/android/studio/ide-zips/3.2.0.17/android-studio-ide-181.4830125-windows32.zip">android-studio-ide-181.4830125-windows32.zip</a>
+                                </td>
+                                <td>1039173758 bytes</td>
+                                <td>c049b9b947695b9618045d10f37b00800bb9d59bb302d5fd266e16806c889b19</td>
+                            </tr>
+                            <tr>
+                                <td>Mac OS X</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.2.0.17/android-studio-ide-181.4830125-mac.zip">android-studio-ide-181.4830125-mac.dmg</a>
+                                </td>
+                                <td>1031383129 bytes</td>
+                                <td>ccb33df4018ee05246caa308a93952e7b06340cfea411ec240cc15753ad633d7</td>
+                            </tr>
+                            <tr>
+                                <td>Linux</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.2.0.17/android-studio-ide-181.4830125-linux.zip">android-studio-ide-181.4830125-linux.zip</a>
+                                </td>
+                                <td>1045818252 bytes</td>
+                                <td>a453cbb4aaffacbee4c794706cd33b8078f0916f62169b250dc243bc03cdca93</td>
+                            </tr>
                             <!-- 3.1.3 正式版 -->
                             <tr>
                                 <td rowspan="5">3.1.3 正式版</td>
