add android studio 3.2 beta 1 links

--- a/index.html
+++ b/index.html
@@ -362,6 +362,41 @@
                             </tr>
                         </thead>
                         <tbody>
+                            <!-- 3.2 Beta 1 -->
+                            <tr>
+                                <td rowspan="5">3.2 Beta 1</td>
+                            </tr>
+                            <tr>
+                                <td rowspan="2">Windows</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.2.0.18/android-studio-ide-181.4847800-windows.zip">android-studio-ide-181.4847800-windows.zip</a>
+                                </td>
+                                <td>736bd7e9b062d5477f92f28d7cf90f4c722080754144d2b6061a408f326d6599 bytes</td>
+                                <td>1044622289</td>
+                                <td rowspan="5"><a href="https://ws2.sinaimg.cn/large/006tNc79gy1fsk4cbbcvxj31kw0t7n52.jpg">查看</a></td>
+                            </tr>
+                            <tr>
+                                <td align="left"><a href="https://dl.google.com/dl/android/studio/ide-zips/3.2.0.18/android-studio-ide-181.4847800-windows32.zip">android-studio-ide-181.4847800-windows32.zip</a>
+                                </td>
+                                <td>dadc967c1f28fdf8736d4cccb2b0259a342b71d82c70d68e282362c7689739eb bytes</td>
+                                <td>1044094836</td>
+                            </tr>
+                            <tr>
+                                <td>Mac OS X</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.2.0.18/android-studio-ide-181.4847800-mac.zip">android-studio-ide-181.4847800-mac.dmg</a>
+                                </td>
+                                <td>3d1aaf21211da28daac5955e279fd8695cc1e60d7dd697bb90a65140c9d7c198 bytes</td>
+                                <td>1036305667</td>
+                            </tr>
+                            <tr>
+                                <td>Linux</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.2.0.18/android-studio-ide-181.4847800-linux.zip">android-studio-ide-181.4847800-linux.zip</a>
+                                </td>
+                                <td>9c91f6d70f3985f2289b28e04028d3717705096dc051290e7e9e773c7adeedc6 bytes</td>
+                                <td>1050739328</td>
+                            </tr>
                             <!-- 3.2 Canary 18 -->
                             <tr>
                                 <td rowspan="5">3.2 Canary 18</td>
