--- a/index.html
+++ b/index.html
@@ -362,6 +362,41 @@
                             </tr>
                         </thead>
                         <tbody>
+                            <!-- 3.2 Beta 2 -->
+                            <tr>
+                                <td rowspan="5">3.2 Beta 2</td>
+                            </tr>
+                            <tr>
+                                <td rowspan="2">Windows</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.2.0.19/android-studio-ide-181.4860949-windows.zip">android-studio-ide-181.4860949-windows.zip</a>
+                                </td>
+                                <td>1046925664 bytes</td>
+                                <td>8e8e5c6db341b5fce576ddabfc55be08d5164d11a5ef3c473861d9ce1b572688</td>
+                                <td rowspan="5"><a href="https://ws2.sinaimg.cn/large/006tNc79gy1fstji8em8gj31k40t6ah3.jpg">查看</a></td>
+                            </tr>
+                            <tr>
+                                <td align="left"><a href="https://dl.google.com/dl/android/studio/ide-zips/3.2.0.19/android-studio-ide-181.4860949-windows32.zip">android-studio-ide-181.4860949-windows32.zip</a>
+                                </td>
+                                <td>1046398211 bytes</td>
+                                <td>3813a97251d10722cd96ac3fff1e1b47fa6d4f7898621c67426a4f51cf16a954</td>
+                            </tr>
+                            <tr>
+                                <td>Mac OS X</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.2.0.19/android-studio-ide-181.4860949-mac.zip">android-studio-ide-181.4860949-mac.dmg</a>
+                                </td>
+                                <td>1038611798 bytes</td>
+                                <td>821a6054c8e21729b91de07c5e3124539b0b521e3ae08a3250ccc4f72b52940f</td>
+                            </tr>
+                            <tr>
+                                <td>Linux</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.2.0.19/android-studio-ide-181.4860949-linux.zip">android-studio-ide-181.4860949-linux.zip</a>
+                                </td>
+                                <td>1053042702 bytes</td>
+                                <td>995bfa122cd94f44fc7119783bd3dfc18309355889266ccc40b23b71bb2030ec</td>
+                            </tr>
                             <!-- 3.2 Beta 1 -->
                             <tr>
                                 <td rowspan="5">3.2 Beta 1</td>
