--- a/index.html
+++ b/index.html
@@ -185,6 +185,11 @@
             </a>
         </div>
         <div class="ad-float-right">
+            <a href="https://t.cn/RdPqSOM" title="「腾讯云云服务器1核2G云服务器+50G对象存储， 10元/月，买1年送4个月。同时还能以10元/月的价格续费2次，每次续费最长1年 相当于是360元买40个月。 买完后还能开车：推荐上车1人送2个月，上车4人送9个月，最长40个月，还等啥，快上车!!!" onclick="trackOutboundLink('https://t.cn/RdPqSOM', 'AD-Candy', 'click');" target="_blank">
+                <img src="https://ws3.sinaimg.cn/large/006tNc79ly1fsxmbit9nlj30m60vgq8w.jpg" style="height: 209px; width: 130px;">
+            </a>
+        </div>
+        <div class="ad-float-right">
             <a href="https://time.geekbang.org/column/intro/82?code=l8dD2lIUPczT%2Ftrb%2BPsyoxe%2BmZWnGlTNHk5kaM%2FbLwg%3D" title="Oracle首席工程师带你修炼 Java 内功" onclick="trackOutboundLink('https://time.geekbang.org/column/intro/82?code=l8dD2lIUPczT%2Ftrb%2BPsyoxe%2BmZWnGlTNHk5kaM%2FbLwg%3D', 'AD-JiKeShiJian-Java-Core-36', 'click');"
                 target="_blank">
                 <img src="https://ws4.sinaimg.cn/large/006tNc79ly1fqxwpxb5d2j303m05tq3o.jpg">
@@ -362,6 +367,76 @@
                             </tr>
                         </thead>
                         <tbody>
+                            <!-- 3.3 Canary 1 -->
+                            <tr>
+                                <td rowspan="5">3.3 Canary 1</td>
+                            </tr>
+                            <tr>
+                                <td rowspan="2">Windows</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.3.0.0/android-studio-ide-181.4861037-windows.zip">android-studio-ide-181.4861037-windows.zip</a>
+                                </td>
+                                <td>1049802594 bytes</td>
+                                <td>87c72e92d3c9103f9474112cda441fb3cc3e9cf88b2d050a99922bd3eb0d9101</td>
+                                <td rowspan="5"><a href="https://ws2.sinaimg.cn/large/006tNc79gy1fsvb6wo8ssj31kw0oq7cj.jpg">查看</a></td>
+                            </tr>
+                            <tr>
+                                <td align="left"><a href="https://dl.google.com/dl/android/studio/ide-zips/3.3.0.0/android-studio-ide-181.4861037-windows32.zip">android-studio-ide-181.4861037-windows32.zip</a>
+                                </td>
+                                <td>1049275141 bytes</td>
+                                <td>0fb08ea72d28731770bd67af4011f6bd6a3f8b9107ddc921034fb4366bc88a45</td>
+                            </tr>
+                            <tr>
+                                <td>Mac OS X</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.3.0.0/android-studio-ide-181.4861037-mac.zip">android-studio-ide-181.4861037-mac.dmg</a>
+                                </td>
+                                <td>1041489129 bytes</td>
+                                <td>497ff098b25b5c7be50e6b82429cbac354d3737f71ceed1a35a7af2d7252c08d</td>
+                            </tr>
+                            <tr>
+                                <td>Linux</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.3.0.0/android-studio-ide-181.4861037-linux.zip">android-studio-ide-181.4861037-linux.zip</a>
+                                </td>
+                                <td>1055919641 bytes</td>
+                                <td>68a9571c48f6241618ec0f468f608a3df8406ce3d7dcf77131dda0917ba471a9</td>
+                            </tr>
+                            <!-- 3.2 Beta 2 -->
+                            <tr>
+                                <td rowspan="5">3.2 Beta 2</td>
+                            </tr>
+                            <tr>
+                                <td rowspan="2">Windows</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.2.0.19/android-studio-ide-181.4860949-windows.zip">android-studio-ide-181.4860949-windows.zip</a>
+                                </td>
+                                <td>1046925664 bytes</td>
+                                <td>8e8e5c6db341b5fce576ddabfc55be08d5164d11a5ef3c473861d9ce1b572688</td>
+                                <td rowspan="5"><a href="https://ws2.sinaimg.cn/large/006tNc79gy1fstji8em8gj31k40t6ah3.jpg">查看</a></td>
+                            </tr>
+                            <tr>
+                                <td align="left"><a href="https://dl.google.com/dl/android/studio/ide-zips/3.2.0.19/android-studio-ide-181.4860949-windows32.zip">android-studio-ide-181.4860949-windows32.zip</a>
+                                </td>
+                                <td>1046398211 bytes</td>
+                                <td>3813a97251d10722cd96ac3fff1e1b47fa6d4f7898621c67426a4f51cf16a954</td>
+                            </tr>
+                            <tr>
+                                <td>Mac OS X</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.2.0.19/android-studio-ide-181.4860949-mac.zip">android-studio-ide-181.4860949-mac.dmg</a>
+                                </td>
+                                <td>1038611798 bytes</td>
+                                <td>821a6054c8e21729b91de07c5e3124539b0b521e3ae08a3250ccc4f72b52940f</td>
+                            </tr>
+                            <tr>
+                                <td>Linux</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.2.0.19/android-studio-ide-181.4860949-linux.zip">android-studio-ide-181.4860949-linux.zip</a>
+                                </td>
+                                <td>1053042702 bytes</td>
+                                <td>995bfa122cd94f44fc7119783bd3dfc18309355889266ccc40b23b71bb2030ec</td>
+                            </tr>
                             <!-- 3.2 Beta 2 -->
                             <tr>
                                 <td rowspan="5">3.2 Beta 2</td>
