add android studio 3.3 canary 2 links

--- a/index.html
+++ b/index.html
@@ -367,6 +367,41 @@
                             </tr>
                         </thead>
                         <tbody>
+                            <!-- 3.3 Canary 2 -->
+                            <tr>
+                                <td rowspan="5">3.3 Canary 2</td>
+                            </tr>
+                            <tr>
+                                <td rowspan="2">Windows</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.3.0.1/android-studio-ide-181.4869471-windows.zip">android-studio-ide-181.4869471-windows.zip</a>
+                                </td>
+                                <td>1017908814 bytes</td>
+                                <td>7f5ab143c3f51b2875cd0c2f6b219a8f8c03ee1d2364fd86eae51918f983b466</td>
+                                <td rowspan="5"><a href="https://ws2.sinaimg.cn/large/006tNc79ly1fsyx1lo4r1j31kw0o3jyo.jpg">查看</a></td>
+                            </tr>
+                            <tr>
+                                <td align="left"><a href="https://dl.google.com/dl/android/studio/ide-zips/3.3.0.1/android-studio-ide-181.4869471-windows32.zip">android-studio-ide-181.4869471-windows32.zip</a>
+                                </td>
+                                <td>1017381361 bytes</td>
+                                <td>3ff2bd509f2fb085505393c27778a2c4a6783bcd3b2ecb029b2ffdf6ba9aa0cc</td>
+                            </tr>
+                            <tr>
+                                <td>Mac OS X</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.3.0.1/android-studio-ide-181.4869471-mac.zip">android-studio-ide-181.4869471-mac.dmg</a>
+                                </td>
+                                <td>1009467359 bytes</td>
+                                <td>8447fd1b8fbb32c29d74e89691247eff90cc2fad9073f1c6efa47e806f00ed0e</td>
+                            </tr>
+                            <tr>
+                                <td>Linux</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.3.0.1/android-studio-ide-181.4869471-linux.zip">android-studio-ide-181.4869471-linux.zip</a>
+                                </td>
+                                <td>1024025851 bytes</td>
+                                <td>221489b2400f50a7e55c05d313470ce7ff4b17804e66bbbe25b0efd25e025bec</td>
+                            </tr>
                             <!-- 3.3 Canary 1 -->
                             <tr>
                                 <td rowspan="5">3.3 Canary 1</td>
