remove tencent cloud ad

--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
                 <img src="https://ws4.sinaimg.cn/large/006tNc79ly1fnpgfyl7wmj303m064gm7.jpg">
             </a>
         </div>
-        <div class="ad-float-right">
+        <div class="ad-float-right hide">
             <a href="https://t.cn/RdPqSOM" title="「腾讯云云服务器1核2G云服务器+50G对象存储， 10元/月，买1年送4个月。同时还能以10元/月的价格续费2次，每次续费最长1年 相当于是360元买40个月。 买完后还能开车：推荐上车1人送2个月，上车4人送9个月，最长40个月，还等啥，快上车!!!" onclick="trackOutboundLink('https://t.cn/RdPqSOM', 'AD-Candy', 'click');" target="_blank">
                 <img src="https://ws3.sinaimg.cn/large/006tNc79ly1fsxmbit9nlj30m60vgq8w.jpg" style="height: 209px; width: 130px;">
             </a>
