--- a/index.html
+++ b/index.html
@@ -190,6 +190,11 @@
             </a>
         </div>
         <div class="ad-float-right">
+            <a href="http://stuq.com/a/100il" title="快速上手 Kotlin 开发" onclick="trackOutboundLink('http://stuq.com/a/100il', 'AD-GeekTime-Kotlin-dev', 'click');" target="_blank">
+                <img src="https://ws2.sinaimg.cn/large/006tKfTcly1ft4p96uuquj30yi1pd1kx.jpg" style="height: 209px; width: 130px;">
+            </a>
+        </div>
+        <div class="ad-float-right hide">
             <a href="https://time.geekbang.org/column/intro/82?code=l8dD2lIUPczT%2Ftrb%2BPsyoxe%2BmZWnGlTNHk5kaM%2FbLwg%3D" title="Oracle首席工程师带你修炼 Java 内功" onclick="trackOutboundLink('https://time.geekbang.org/column/intro/82?code=l8dD2lIUPczT%2Ftrb%2BPsyoxe%2BmZWnGlTNHk5kaM%2FbLwg%3D', 'AD-JiKeShiJian-Java-Core-36', 'click');"
                 target="_blank">
                 <img src="https://ws4.sinaimg.cn/large/006tNc79ly1fqxwpxb5d2j303m05tq3o.jpg">
