add android stuido 3.2 beta3 links

--- a/index.html
+++ b/index.html
@@ -372,6 +372,41 @@
                             </tr>
                         </thead>
                         <tbody>
+                            <!-- 3.2 Beta 3 -->
+                            <tr>
+                                <td rowspan="5">3.2 Beta 3</td>
+                            </tr>
+                            <tr>
+                                <td rowspan="2">Windows</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.2.0.20/android-studio-ide-181.4868252-windows.zip">android-studio-ide-181.4868252-windows.zip</a>
+                                </td>
+                                <td>1046927612 bytes</td>
+                                <td>3a196c1738a117446979134ae67e45a85fe757b8db4e9c37d6589845d02a5aab</td>
+                                <td rowspan="5"><a href="https://ws2.sinaimg.cn/large/006tKfTcly1ft6zjxgfkfj310e0fzn0c.jpg">查看</a></td>
+                            </tr>
+                            <tr>
+                                <td align="left"><a href="https://dl.google.com/dl/android/studio/ide-zips/3.2.0.20/android-studio-ide-181.4868252-windows32.zip">android-studio-ide-181.4868252-windows32.zip</a>
+                                </td>
+                                <td>1046400159 bytes</td>
+                                <td>739b57c7e0e284060f838eb8b5b248bbb78a6ccebff9ec67f541aeb248eb8f04</td>
+                            </tr>
+                            <tr>
+                                <td>Mac OS X</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.2.0.20/android-studio-ide-181.4868252-mac.zip">android-studio-ide-181.4868252-mac.dmg</a>
+                                </td>
+                                <td>1038613763 bytes</td>
+                                <td>6aff4bf228960902bec2e18096f1653927c27b8656dfc92dfe32d2ef8c797c4d</td>
+                            </tr>
+                            <tr>
+                                <td>Linux</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.2.0.20/android-studio-ide-181.4868252-linux.zip">android-studio-ide-181.4868252-linux.zip</a>
+                                </td>
+                                <td>1053044647 bytes</td>
+                                <td>32349dceca498fd2e1c9cd1190917e0683eadbb1166e6f4a16709f30fc7e279f</td>
+                            </tr>
                             <!-- 3.3 Canary 2 -->
                             <tr>
                                 <td rowspan="5">3.3 Canary 2</td>
