add deepin jvm ad

--- a/index.html
+++ b/index.html
@@ -190,11 +190,16 @@
             </a>
         </div>
         <div class="ad-float-right">
+            <a href="http://stuq.com/a/100kM" title="深入拆解 Java 虚拟机" onclick="trackOutboundLink('http://stuq.com/a/100kM', 'AD-GeekTime-Deep-JVM', 'click');" target="_blank">
+                <img src="https://ws2.sinaimg.cn/large/006tNc79gy1ftdwsfqykyj30u01hcgor.jpg" style="height: 209px; width: 130px;">
+            </a>
+        </div>
+        <div class="ad-float-right">
             <a href="http://stuq.com/a/100il" title="快速上手 Kotlin 开发" onclick="trackOutboundLink('http://stuq.com/a/100il', 'AD-GeekTime-Kotlin-dev', 'click');" target="_blank">
                 <img src="https://ws2.sinaimg.cn/large/006tKfTcly1ft4p96uuquj30yi1pd1kx.jpg" style="height: 209px; width: 130px;">
             </a>
         </div>
-        <div class="ad-float-right hide">
+        <div class="ad-float-right">
             <a href="https://time.geekbang.org/column/intro/82?code=l8dD2lIUPczT%2Ftrb%2BPsyoxe%2BmZWnGlTNHk5kaM%2FbLwg%3D" title="Oracle首席工程师带你修炼 Java 内功" onclick="trackOutboundLink('https://time.geekbang.org/column/intro/82?code=l8dD2lIUPczT%2Ftrb%2BPsyoxe%2BmZWnGlTNHk5kaM%2FbLwg%3D', 'AD-JiKeShiJian-Java-Core-36', 'click');"
                 target="_blank">
                 <img src="https://ws4.sinaimg.cn/large/006tNc79ly1fqxwpxb5d2j303m05tq3o.jpg">
@@ -205,7 +210,7 @@
                 <img src="https://ws2.sinaimg.cn/large/006tNc79ly1fpkkpcg8poj303m06f3yn.jpg">
             </a>
         </div>
-        <div class="ad-float-right">
+        <div class="ad-float-right hide">
             <a href="https://otcbtc.com/referrals/INFERJAY" title="扫码注册，领比特币红包，OTCBTC 最流畅、最靠谱、最好用的场外交易平台。" onclick="trackOutboundLink('https://otcbtc.com/referrals/INFERJAY', 'AD-OTCBTC-Redpacket', 'click');" target="_blank">
                 <img src="https://ws1.sinaimg.cn/large/006tNc79ly1fmvgx80nrej303m05tmxv.jpg">
             </a>
@@ -372,6 +377,41 @@
                             </tr>
                         </thead>
                         <tbody>
+                            <!-- 3.3 Canary 3 -->
+                            <tr>
+                                <td rowspan="5">3.3 Canary 3</td>
+                            </tr>
+                            <tr>
+                                <td rowspan="2">Windows</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.3.0.2/android-studio-ide-181.4884283-windows.zip">android-studio-ide-181.4884283-windows.zip</a>
+                                </td>
+                                <td>1018418728 bytes</td>
+                                <td>fec2dbd9e8a70980a9bf1cbdff55bc236867f5dd1dbfce9fe51bc62ceb09a2df</td>
+                                <td rowspan="5"><a href="https://ws4.sinaimg.cn/large/006tNc79gy1ftbfmjdtftj31je0sm7b6.jpg">查看</a></td>
+                            </tr>
+                            <tr>
+                                <td align="left"><a href="https://dl.google.com/dl/android/studio/ide-zips/3.3.0.2/android-studio-ide-181.4884283-windows32.zip">android-studio-ide-181.4884283-windows32.zip</a>
+                                </td>
+                                <td>1017891275 bytes</td>
+                                <td>1b78a8dfb40f622215272718c98b768544c7388323a955fe46c1b6fe61647abd</td>
+                            </tr>
+                            <tr>
+                                <td>Mac OS X</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.3.0.2/android-studio-ide-181.4884283-mac.zip">android-studio-ide-181.4884283-mac.dmg</a>
+                                </td>
+                                <td>1009977141 bytes</td>
+                                <td>98a28d32ea7690135f5e16452890933a1ac192f9762a3659495791dad170e12e</td>
+                            </tr>
+                            <tr>
+                                <td>Linux</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.3.0.2/android-studio-ide-181.4884283-linux.zip">android-studio-ide-181.4884283-linux.zip</a>
+                                </td>
+                                <td>1024535764 bytes</td>
+                                <td>90436a08ef8ba1fe5266a4f91954d815ab5d64b4f3017381f9ffb183f8f72365</td>
+                            </tr>
                             <!-- 3.2 Beta 3 -->
                             <tr>
                                 <td rowspan="5">3.2 Beta 3</td>
