add android studio 3.2 beta4 link

--- a/index.html
+++ b/index.html
@@ -377,6 +377,41 @@
                             </tr>
                         </thead>
                         <tbody>
+                            <!-- 3.2 Beta 4 -->
+                            <tr>
+                                <td rowspan="5">3.2 Beta 4</td>
+                            </tr>
+                            <tr>
+                                <td rowspan="2">Windows</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.2.0.21/android-studio-ide-181.4886486-windows.zip">android-studio-ide-181.4886486-windows.zip</a>
+                                </td>
+                                <td>1047067372 bytes</td>
+                                <td>a67762fa23d30ab6cdb71b03b387ff4b6654d695f69f7df0e6f0d3d0d0036c50</td>
+                                <td rowspan="5"><a href="https://ws2.sinaimg.cn/large/006tKfTcly1ft6zjxgfkfj310e0fzn0c.jpg">查看</a></td>
+                            </tr>
+                            <tr>
+                                <td align="left"><a href="https://dl.google.com/dl/android/studio/ide-zips/3.2.0.21/android-studio-ide-181.4886486-windows32.zip">android-studio-ide-181.4886486-windows32.zip</a>
+                                </td>
+                                <td>1046539919 bytes</td>
+                                <td>9ed4608bd8368e5aeb0d2b75cc4564f5c7c687580be2cc2a34acddec944f23b2</td>
+                            </tr>
+                            <tr>
+                                <td>Mac OS X</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.2.0.21/android-studio-ide-181.4886486-mac.zip">android-studio-ide-181.4886486-mac.dmg</a>
+                                </td>
+                                <td>1038753513 bytes</td>
+                                <td>cb4268f1a297f0b170b1f5bef3e7b29549f24b829805591416d612513b67e364</td>
+                            </tr>
+                            <tr>
+                                <td>Linux</td>
+                                <td align="left">
+                                    <a href="https://dl.google.com/dl/android/studio/ide-zips/3.2.0.21/android-studio-ide-181.4886486-linux.zip">android-studio-ide-181.4886486-linux.zip</a>
+                                </td>
+                                <td>1053184414 bytes</td>
+                                <td>23eb2829815954bda08c6a4d2ecda385fe61bf58ed52890bd9eea067816794d8</td>
+                            </tr>
                             <!-- 3.3 Canary 3 -->
                             <tr>
                                 <td rowspan="5">3.3 Canary 3</td>
